--- a/src/assets/css/station4.css
+++ b/src/assets/css/station4.css
@@ -12,7 +12,7 @@ header {
     width: 300px;
     height: 275px;
     position:relative;
-    left: 50px;
+    left: 75px;
     top: 100px;
 }
 
@@ -37,7 +37,7 @@ img {
 }
 
 body {
-    background-color: #c4c4c4;
+    background-color: #C4C4C4;
 }
 
 footer {
