--- a/src/assets/css/station4.css
+++ b/src/assets/css/station4.css
@@ -1,7 +1,7 @@
 header {
     background-color: #ffffff;
     width: 100%;
-    height: 50px;
+    height: 40px;
     position: absolute;
     top: 0px;
 }
@@ -10,7 +10,7 @@ header {
     background-color: #ffffff;
     padding: 5px;
     width: 300px;
-    height: 275px;
+    height: 290px;
     position: relative;
     left: 75px;
     top: 100px;
@@ -33,16 +33,17 @@ img {
     color: #282828;
     margin: 5px;
     font-size: 12px;
-    line-height: 13px
+    line-height: 13px;
 }
 
 body {
+    position: relative;
     background-color: #C4C4C4;
 }
 
 footer {
     background-color: #ffffff;
-    height: 50px;
+    height: 40px;
     width: 100%;
     position: absolute;
     bottom: 0px;
